fix positions and z-index components

--- a/src/index.css
+++ b/src/index.css
@@ -13,26 +13,29 @@ a{
 .line_black{
   min-height: 10vh;
 }
-.line_blue{
+
+#line_blue{
   min-height: 20vh;
-  z-index: 3;
+  z-index: 2;
+  position: relative;
   img{
     max-width: 50px;
     max-height: 50px;
   }
 }
 
-.bgimg{
+#bgimg{
   background-image: url("/public/img/footer-bg.jpg");
   background-size: cover;
   max-height: 400px;
   background-repeat: no-repeat;
   z-index: 1;
+  position: relative;
   
   ul{
     list-style-type: none;
     li{
-      color: lightgrey;
+      color: rgba(211, 211, 211, 0.699);
 
       h3{
         color: white;
@@ -42,11 +45,16 @@ a{
   
 }
 
-.dcbg{
+#dcbg{
+  position: absolute;
   z-index: 2;
+  top: -100px;
+  right: 100px;
 }
 
-.line_grey{
+#line_grey{
   min-height: 15vh;
   background-color: rgb(54, 51, 51);
+  position: relative;
+  z-index: 2;
 }
